--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     .hero-section{position:relative;height:100vh;min-height:600px;display:flex;align-items:center;justify-content:center;overflow:hidden}
     .hero-picture{position:absolute;top:0;left:0;width:100%;height:100%;z-index:1}
     .hero-image{width:100%;height:100%;object-fit:cover;object-position:center;display:block;will-change:auto;transform:translate3d(0,0,0)}
-    .hero-overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.4),rgba(0,0,0,0.6));z-index:2}
+    .hero-overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:2}
     .hero-content{position:relative;z-index:3;text-align:center;max-width:900px;padding:3rem 1.5rem 6rem;background:rgba(0,0,0,0.3);border-radius:20px;border:1px solid rgba(255,255,255,0.15);margin-top:30px;box-shadow:0 8px 32px rgba(0,0,0,0.3)}
     /* 立即顯示 - 移除AOS延遲 */
     .hero-content-immediate{opacity:1;transform:translateY(0);animation:heroFadeIn 0.8s ease-out}
