--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
     .hero-image{width:100%;height:100%;object-fit:cover;object-position:center;display:block;will-change:auto;transform:translate3d(0,0,0)}
     .hero-overlay{position:absolute;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.5);z-index:2}
     .hero-content{position:relative;z-index:3;text-align:center;max-width:900px;padding:3rem 1.5rem 6rem;background:rgba(0,0,0,0.3);border-radius:20px;border:1px solid rgba(255,255,255,0.15);margin-top:30px;box-shadow:0 8px 32px rgba(0,0,0,0.3)}
-    /* 立即顯示 - 移除AOS延遲 */
-    .hero-content-immediate{opacity:1;transform:translateY(0);animation:heroFadeIn 0.8s ease-out}
-    .hero-scroll-immediate{opacity:1;animation:heroScrollFade 1.2s ease-out 0.5s both}
-    @keyframes heroFadeIn{0%{opacity:0;transform:translateY(20px)}100%{opacity:1;transform:translateY(0)}}
+    /* 立即顯示 - 簡潔0.3s淡入 */
+    .hero-content-immediate{animation:heroFadeIn 0.3s ease-out}
+    .hero-scroll-immediate{animation:heroScrollFade 0.3s ease-out 0.2s both}
+    @keyframes heroFadeIn{0%{opacity:0}100%{opacity:1}}
     @keyframes heroScrollFade{0%{opacity:0}100%{opacity:1}}
     </style>
 
