--- a/index.html
+++ b/index.html
@@ -42,12 +42,11 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.kiwi-villa.com/">
     
-    <!-- Hero圖片 Preload - 使用超壓縮版本獲得極致性能 -->
+    <!-- Hero圖片 Preload - 只載入現代格式，JPG僅作備用 -->
     <link rel="preload" href="images/hero/main-hall-environment-new.avif" as="image" type="image/avif" fetchpriority="high">
     <link rel="preload" href="images/hero/main-hall-environment-ultra.webp" as="image" type="image/webp" fetchpriority="high">
     <link rel="preload" href="images/hero/main-hall-environment-mobile-new.avif" as="image" type="image/avif" media="(max-width: 768px)" fetchpriority="high">
     <link rel="preload" href="images/hero/main-hall-environment-mobile-ultra.webp" as="image" type="image/webp" media="(max-width: 768px)" fetchpriority="high">
-    <link rel="preload" href="images/hero/main-hall-environment-optimized.jpg" as="image" type="image/jpeg" fetchpriority="high">
     
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
