--- a/index.html
+++ b/index.html
@@ -42,16 +42,16 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://www.kiwi-villa.com/">
     
-    <!-- Hero圖片 Preload - 精細的響應式控制 -->
+    <!-- Hero圖片 Preload - 極度優化版本 -->
     <link rel="preload" href="images/hero/main-hall-environment-new.avif" as="image" type="image/avif" 
           imagesrcset="images/hero/main-hall-environment-new.avif 1920w, images/hero/main-hall-environment.avif 2560w"
           imagesizes="100vw" fetchpriority="high">
     <link rel="preload" href="images/hero/main-hall-environment-ultra.webp" as="image" type="image/webp" 
           imagesrcset="images/hero/main-hall-environment-ultra.webp 1920w, images/hero/main-hall-environment.webp 2560w"
           imagesizes="100vw" fetchpriority="high">
-    <link rel="preload" href="images/hero/main-hall-environment-mobile-ultra-compressed.avif" as="image" type="image/avif" 
+    <link rel="preload" href="images/hero/main-hall-environment-mobile-extreme.avif" as="image" type="image/avif" 
           media="(max-width: 768px)" 
-          imagesrcset="images/hero/main-hall-environment-mobile-ultra-compressed.avif 768w"
+          imagesrcset="images/hero/main-hall-environment-mobile-extreme.avif 768w"
           imagesizes="100vw" fetchpriority="high">
     <link rel="preload" href="images/hero/main-hall-environment-mobile-ultra.webp" as="image" type="image/webp" 
           media="(max-width: 768px)" 
@@ -778,7 +778,7 @@
         "description": "澎湖期遇度假會館，座落於三面環海半島，融合歐洲巴洛克古典建築美學，提供獨特的海島度假體驗。",
         "url": "https://www.kiwi-villa.com/",
         "telephone": "+886-933-636373",
-        "email": "info@kiwi-villa.com",
+        "email": "info@kiwi-villa[dot]com",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "NO.347, Xiwei Village, Magong City, Penghu County, Taiwan",
@@ -823,25 +823,15 @@
     <!-- Navigation -->
     <nav class="navbar" id="navbar" data-aos="fade-down">
         <div class="nav-container">
-                    <div class="nav-logo">
-            <a href="index.html" class="logo">
-                <picture>
-                    <source srcset="images/logo/kiwi-villa-logo-small.avif 45w,
-                                   images/logo/kiwi-villa-logo-medium.webp 90w" 
-                            type="image/avif">
-                    <source srcset="images/logo/kiwi-villa-logo-small.webp 45w,
-                                   images/logo/kiwi-villa-logo-medium.webp 90w" 
-                            type="image/webp">
+            <div class="nav-logo">
+                <a href="index.html" class="logo">
                     <img src="images/logo/kiwi-villa-logo-small.webp" 
                          alt="澎湖期遇度假會館 Logo" 
                          class="logo-img"
                          width="45" 
-                         height="24"
-                         sizes="(max-width: 768px) 45px, 60px">
-                </picture>
-            </a>
-            
-        </div>
+                         height="24">
+                </a>
+            </div>
             <ul class="nav-menu" id="nav-menu">
                 <li class="nav-item">
                     <a href="index.html" class="nav-link active">首頁</a>
@@ -882,7 +872,7 @@
     <section class="hero-section" id="hero">
         <picture class="hero-picture">
             <!-- 手機版 - 超壓縮版本 -->
-            <source srcset="images/hero/main-hall-environment-mobile-ultra-compressed.avif 768w" 
+            <source srcset="images/hero/main-hall-environment-mobile-extreme.avif 768w" 
                     media="(max-width: 768px)" type="image/avif">
             <source srcset="images/hero/main-hall-environment-mobile-ultra.webp 768w" 
                     media="(max-width: 768px)" type="image/webp">
@@ -930,10 +920,10 @@
                     <i class="fas fa-calendar-alt"></i>
                     開始期遇之旅
                 </a>
-                                    <a href="https://booking.owlting.com/kiwi-villa" class="btn btn-secondary" target="_blank">
-                        <i class="fas fa-calendar-check"></i>
-                        線上訂房
-                    </a>
+                <a href="https://booking.owlting.com/kiwi-villa" class="btn btn-secondary" target="_blank">
+                    <i class="fas fa-calendar-check"></i>
+                    線上訂房
+                </a>
             </div>
         </div>
         <div class="hero-scroll-indicator hero-scroll-immediate">
@@ -1022,8 +1012,6 @@
         </div>
     </section>
 
-
-
     <!-- CTA Section -->
     <section class="cta-section" id="booking">
         <div class="cta-background"></div>
@@ -1053,20 +1041,11 @@
                 <div class="footer-section" data-aos="fade-up" data-aos-delay="100">
                     <div class="footer-logo">
                         <a href="index.html">
-                            <picture>
-                                <source srcset="images/logo/kiwi-villa-logo-small.avif 45w,
-                                               images/logo/kiwi-villa-logo-medium.webp 90w" 
-                                        type="image/avif">
-                                <source srcset="images/logo/kiwi-villa-logo-small.webp 45w,
-                                               images/logo/kiwi-villa-logo-medium.webp 90w" 
-                                        type="image/webp">
-                                <img src="images/logo/kiwi-villa-logo-small.webp" 
-                                     alt="澎湖期遇度假會館 Logo" 
-                                     class="footer-logo-img"
-                                     width="45" 
-                                     height="24"
-                                     sizes="(max-width: 768px) 45px, 60px">
-                            </picture>
+                            <img src="images/logo/kiwi-villa-logo-small.webp" 
+                                 alt="澎湖期遇度假會館 Logo" 
+                                 class="footer-logo-img"
+                                 width="45" 
+                                 height="24">
                         </a>
                         <span class="footer-logo-text">期遇度假會館</span>
                     </div>
@@ -1117,7 +1096,7 @@
                         </div>
                         <div class="contact-item">
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:info@kiwi-villa.com" class="contact-link">info@kiwi-villa.com</a>
+                            <a href="#" onclick="location.href='mai'+'lto:info'+'@kiwi-villa.com'" class="contact-link">info@kiwi-villa.com</a>
                         </div>
                         <div class="contact-item">
                             <i class="fab fa-line"></i>
