--- a/index.html
+++ b/index.html
@@ -680,11 +680,11 @@
         <div class="nav-container">
             <div class="nav-logo">
                 <a href="index.html" class="logo">
-                    <img src="images/logo/kiwi-villa-logo-small.webp" 
-                         alt="澎湖期遇度假會館 Logo" 
-                         class="logo-img"
-                         width="45" 
-                         height="24">
+                    <picture>
+                        <source srcset="images/logo/kiwi-villa-logo.avif" type="image/avif">
+                        <source srcset="images/logo/kiwi-villa-logo.webp" type="image/webp">
+                        <img src="images/logo/kiwi-villa-logo.webp" alt="澎湖期遇度假會館 Logo" class="logo-img">
+                    </picture>
                 </a>
             </div>
             <ul class="nav-menu" id="nav-menu">
@@ -749,7 +749,7 @@
         <div class="hero-content hero-content-immediate">
             <div class="hero-subtitle-small">澎湖民宿推薦</div>
             <h1 class="hero-title">期遇度假會館</h1>
-            <h2 class="hero-subtitle">・期待相遇</h2>
+            <h2 class="hero-subtitle">期待相遇</h2>
             <div class="hero-poem">
                 <p>旅行，是與驚喜不期而遇</p>
                 <p>也是，在途中遇見另一個自己</p>
@@ -879,11 +879,11 @@
                 <div class="footer-section" data-aos="fade-up" data-aos-delay="100">
                     <div class="footer-logo">
                         <a href="index.html">
-                            <img src="images/logo/kiwi-villa-logo-small.webp" 
-                                 alt="澎湖期遇度假會館 Logo" 
-                                 class="footer-logo-img"
-                                 width="45" 
-                                 height="24">
+                            <picture>
+                                <source srcset="images/logo/kiwi-villa-logo.avif" type="image/avif">
+                                <source srcset="images/logo/kiwi-villa-logo.webp" type="image/webp">
+                                <img src="images/logo/kiwi-villa-logo.webp" alt="澎湖期遇度假會館 Logo" class="footer-logo-img">
+                            </picture>
                         </a>
                         <span class="footer-logo-text">期遇度假會館</span>
                     </div>
