--- a/faq.html
+++ b/faq.html
@@ -76,7 +76,7 @@
                 "name": "為什麼我們房價比周圍的都貴？",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "我們的建造成本、早餐成本、備品成本、布草成本都比別人高，也可以自信的說比別人好！民宿本身主體結構、建材、油漆用料這些看不到的東西，都用料實在。"
+                    "text": "我們的建造成本、早餐成本、備品成本、布草成本都比別人高且品質更好。我們在看不到的地方也用料實在，例如主體結構、建材與油漆。裝潢風格一致、細節豐滿，早餐品質廣受好評，床單被單更採用100支全棉製品，提供極致的親膚感。我們堅持明碼標價，誠信經營。"
                 }
             },
             {
@@ -84,7 +84,7 @@
                 "name": "民宿有海景嗎？",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "民宿每一間都沒有海景，但是都有落地窗跟獨立陽台。"
+                    "text": "民宿每一間房間都沒有海景，但是都有寬敞的落地窗以及獨立的私人陽台。"
                 }
             },
             {
@@ -92,7 +92,55 @@
                 "name": "民宿可以包棟嗎？",
                 "acceptedAnswer": {
                     "@type": "Answer",
-                    "text": "我們並非專營包棟民宿，主人都是自住裡面的，民宿比較大間，一共可以住25位，不適合15位以下的包棟。"
+                    "text": "我們並非專營包棟民宿，但若能接受相關規定（請加LINE洽詢），可以包下所有房間。民宿空間較大，共可容納25位，因此不適合15位以下的團體包棟。"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "民宿可以烤肉、打麻將嗎？",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "我們不提供麻將桌與麻將。關於烤肉，即使包棟也不能在民宿範圍內烤肉。若您有烤肉需求，我們可以協助安排外燴業者到府服務。"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "民宿有提供什麼設施嗎？",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "所有客房均提供舒適大床、優質棉被、全套TOTO衛浴設備及免治馬桶。公共設施包含電梯、舒適的一樓公共空間、100吋大螢幕影視設備以及頂樓戲水池（3m x 6m）。"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "民宿提供的早餐是什麼樣的？",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "我們提供一人一份的中式早餐，用餐時間為上午8:30至10:00。若需配合行程提早用餐，請於前一晚21:00前告知，我們將為您準備可外帶的早餐。"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "民宿可以代訂機票、船票、包套行程嗎？",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "我們可以協助代訂。機票部分，若人數不多建議自行上網預訂以方便後續作業；團體票可由我們配合的旅行社處理。行程部分，我們會在訂房後提供詳細的行程諮詢與規劃服務。船票也可透過合作旅行社代訂，詳情請加LINE洽詢。"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "有什麼特別優惠嗎？",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "若您詳閱並同意民宿相關規定，並透過匯款訂金的方式完成訂房，請在匯款前聯繫我們的訂房小編，即可享有額外優惠。"
+                }
+            },
+            {
+                "@type": "Question",
+                "name": "澎湖適合開汽車還是騎機車呢？",
+                "acceptedAnswer": {
+                    "@type": "Answer",
+                    "text": "機車的優點是費用較低且行動靈活。汽車的優點是舒適、可避暑躲雨，且除了特定時段外，在各景點停車都相當方便。您可以根據自身需求與偏好來選擇。"
                 }
             }
         ]
