--- a/rooms.html
+++ b/rooms.html
@@ -58,8 +58,9 @@
     <noscript><link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css"></noscript>
     
     <!-- Main CSS -->
-    <link rel="preload" href="css/base.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-    <noscript><link rel="stylesheet" href="css/base.css"></noscript>
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/layout.css">
+    <link rel="stylesheet" href="css/rooms.css">
     
     <!-- Structured Data for LodgingBusiness and individual Rooms -->
     <script type="application/ld+json">
@@ -286,7 +287,7 @@
                         <div class="gallery-item" data-aos="zoom-in">
                             <picture>
                                 <source srcset="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room1.webp" type="image/webp">
-                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room1.webp" alt="豪華家庭房-圖片-1" fetchpriority="high">
+                                <img src="images/rooms/luxuryFamily/penghu-kiwi-villa-luxury-family-room1.webp" alt="豪華家庭房-圖片-1" loading="lazy">
                             </picture>
                         </div>
                         <div class="gallery-item" data-aos="zoom-in" data-aos-delay="100">
